# rust-by-example

./: .gitmodules
axum-sse/: Cargo.toml
axum-sse/src/: main.rs
axum-sse/src/handlers/: current_time.rs  mod.rs
basic-stat-machine/: Cargo.toml
basic-stat-machine/src/: main.rs
box-example/src/: main.rs
builder-pattern/: Cargo.toml
builder-pattern/src/: main.rs
cfg_attr/: Cargo.toml
cfg_attr/src/: lib.rs
collect_demo/: Cargo.toml
collect_demo/src/: main.rs
deref-trait-example/: Cargo.toml
deref-trait-example/src/: main.rs
enum-example/src/: main.rs
err-example/: Cargo.toml  hello.txt
err-example/src/: main.rs
ffi-extern/: Cargo.toml
ffi-extern/src/: main.rs
func_chain/: Cargo.toml
func_chain/src/: main.rs
mqtt-subpub/: Cargo.toml
mqtt-subpub/src/: main.rs
mybank/: Cargo.toml  docker-compose.yml
mybank/migrations/: 20230901070336_create_account_events.sql  20230901070426_create_account_snapshots.sql  20230901150117_create_account_view.sql
mybank/src/: main.rs
mybank/src/domain/accounts/: aggregate.rs  errors.rs  events.rs  mod.rs  queries.rs  services.rs
parameter-pattern-matching/: Cargo.toml
parameter-pattern-matching/src/: main.rs
plain-http-server/: Cargo.toml
plain-http-server/src/: lib.rs  main.rs
priority-queue/src/: main.rs
rc-reference-counting-example/: Cargo.toml
ref-cell-interior-mutability-mock-testing/: Cargo.toml
rust-base/: Cargo.toml
state-pattern-as-types/: Cargo.toml
tracing/: Cargo.toml
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-lunatic/: Cargo.toml  README.md
(+11 files in other folders)
