[package]
name = "axum-sse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tokio", "tracing"] }
chrono = "0.4.26"
futures-util = "0.3.28"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
